[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Scene/Race/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scene/Race/Speedway.gd" type="Script" id=2]
[ext_resource path="res://src/Object/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://src/Scene/Race/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprite/correr-3.png" type="Texture" id=6]
[ext_resource path="res://assets/sprite/correr-5.png" type="Texture" id=7]
[ext_resource path="res://assets/sprite/correr-6.png" type="Texture" id=8]
[ext_resource path="res://assets/sprite/correr-7.png" type="Texture" id=9]
[ext_resource path="res://assets/sprite/correr-4.png" type="Texture" id=10]
[ext_resource path="res://assets/sprite/correr-2.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Speedway" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 637.479 ]
}

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -101

[node name="TileMap" type="TileMap" parent="CanvasLayer"]
tile_set = SubResource( 2 )
show_collision = true
collision_layer = 2
format = 1
tile_data = PoolIntArray( 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 800, 250.95 )

[node name="jump" parent="Player" index="1"]
margin_left = 670.375
margin_top = 445.766
margin_right = 820.375
margin_bottom = 595.766

[node name="Player" parent="Player" index="2"]
position = Vector2( 224.253, 21.3574 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="marathonist" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 165.52, 822.261 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="marathonist2" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 421.809, 918.37 )
frames = SubResource( 3 )
playing = true

[node name="marathonist3" type="AnimatedSprite" parent="."]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 630.044, 859.637 )
frames = SubResource( 3 )
playing = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player"]
